--- a/postprocessing.ipynb
+++ b/postprocessing.ipynb
@@ -11,8 +11,10 @@
     "from pathlib import Path \n",
     "import plotly.express as px\n",
     "import numpy as np\n",
+    "from postprocessing import apply_flow\n",
     "\n",
-    "ROOT_DIR = Path(\"../\")"
+    "ROOT_DIR = Path(\"../\")\n",
+    "IMAGE_ID = \"0791\""
    ]
   },
   {
@@ -21,10 +23,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mask = tifffile.imread(ROOT_DIR / \"train/a_GT/man_seg0474.tif\") != 0\n",
+    "mask = tifffile.imread(ROOT_DIR / f\"train/a_GT/man_seg{IMAGE_ID}.tif\") != 0\n",
     "\n",
-    "mask_gradients = tifffile.imread(ROOT_DIR / \"train/a_flow/seg0474_gradients.tif\")\n",
-    "mask_gradients = torch.tensor(mask_gradients[[1, 0], :, :]).unsqueeze(0)\n",
+    "flow = tifffile.imread(ROOT_DIR / f\"train/a_flow/man_seg{IMAGE_ID}_flow.tif\")\n",
+    "flow = torch.tensor(flow).unsqueeze(0).repeat(16, 1, 1, 1)\n",
+    "flow = flow.permute(0, 3, 1, 2)  # from NHWC to NCHW"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions = apply_flow(flow)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "px.scatter(x=positions[15, :, :, 1][mask], y=positions[15, :, :, 0][mask]).update_yaxes(\n",
+    "    scaleanchor=\"x\",\n",
+    "    scaleratio=1,\n",
+    ").update_layout(width=800, height=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "batch_size = mask_gradients.shape[0]\n",
     "image_height = mask_gradients.shape[2]\n",
@@ -62,15 +94,53 @@
     ")\n",
     "positions = positions * 2 - 1\n",
     "\n",
-    "mask_gradients *= 2.0 / torch.tensor([image_height, image_width]).unsqueeze(0).unsqueeze(-1).unsqueeze(-1)\n",
-    "\n",
-    "# positions = positions[:, :, :, [1, 0]]\n",
+    "mask_gradients *= 2.0 / torch.tensor([image_height, image_width]).unsqueeze(-1).unsqueeze(-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask_gradients.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions = positions[:, :, :, [1, 0]]\n",
+    "mask_gradients = mask_gradients[:, [1, 0], :, :]\n",
     "for _ in range(100):\n",
     "    gradients = torch.nn.functional.grid_sample(\n",
     "        mask_gradients, positions, align_corners=False\n",
     "    )\n",
     "    for k in range(2):\n",
-    "        positions[:,:,:,k] = torch.clamp(positions[:,:,:,k] + gradients[:,k,:,:], -1.0, 1.0)"
+    "        positions[:, :, :, k] = positions[:, :, :, k] + gradients[:, k, :, :]\n",
+    "torch.clamp(positions, -1, 1)\n",
+    "positions = positions[:, :, :, [1, 0]]\n",
+    "mask_gradients = mask_gradients[:, [1, 0], :, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions.shape"
    ]
   },
   {
@@ -83,9 +153,10 @@
     "positions *= (\n",
     "    torch.tensor([image_height, image_width]).double().unsqueeze(0).unsqueeze(0)\n",
     ")\n",
-    "px.scatter(\n",
-    "    x=positions[0, :, :, 1][mask], y=positions[0, :, :, 0][mask]\n",
-    ").update_yaxes(scaleanchor=\"x\", scaleratio=1,).update_layout(width=800, height=800)"
+    "px.scatter(x=positions[0, :, :, 1][mask], y=positions[0, :, :, 0][mask]).update_yaxes(\n",
+    "    scaleanchor=\"x\",\n",
+    "    scaleratio=1,\n",
+    ").update_layout(width=800, height=800)"
    ]
   },
   {
